Bug 832578 - Tweaks to improve compilation of element accesses, r=dvander.