js/src/jsarray.h
@@ -16,7 +16,7 @@
 #include "jsobj.h"
 
 /* Small arrays are dense, no matter what. */
-const unsigned MIN_SPARSE_INDEX = 256;
+const unsigned MIN_SPARSE_INDEX = 512;
 
 namespace js {
 /* 2^32-2, inclusive */
